# dark-health-data

./: .env.example  .gitignore  .zenodo.json  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  NEXT_STEPS.md  README.md  ROADMAP.md  START_HERE.md  pyproject.toml
.claude/: settings.json
audit/: verify_numbers.py
data/: .gitignore
docs/: architecture.md  desktop-publishing.md  landscape.md  non-duplication.md  validation-protocol.md  validation-runbook.md  verification.md
registry/: datasets.yaml  sources_chna.yaml  sources_chna_live.yaml.example  sources_eqr.yaml  sources_eqr_live.yaml.example  sources_mmrc.yaml  sources_mmrc_live.yaml.example  sources_nursing_home_2567.yaml  sources_nursing_home_2567_live.yaml.example  sources_waiver_1115.yaml  sources_waiver_1115_live.yaml.example
scripts/: build_exclusions.py  build_recall_enumeration.py  build_sources.py  build_vision_validation_sample.py  conformal_eval.py  eqr_vision_pass.py  insights_eqr.py  make_coverage_figure.py  make_release.py  make_sample_eqr_pdf.py  modal_chartgemma.py  modal_fetch_ocr.py  modal_vision_hybrid.py  publish_zenodo.py  recall_estimate.py  run_demo.py  vision_lift_probe.py  vision_local_hybrid.py  vision_revalidate.py  vision_validation_analyze.py
tests/: conftest.py  test_agreement.py  test_batch_provenance.py  test_connectors_chna_mmrc.py  test_connectors_nursing_home_2567.py  test_connectors_waiver_1115.py  test_crawl.py  test_ensemble_pipeline.py  test_eqr_reporting_year.py  test_evaluation.py  test_merge.py  test_models.py  test_payload_robustness.py  test_pdf_roundtrip.py  test_pipeline_demo.py  test_rules_extractor.py  test_verify.py  test_vision_extractor.py
(+40 files in other folders)
